# QuickView

./: .bumpversion.cfg  .codespell-ignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  appui.py  eam_filters.py  eam_reader.py  eamapp.py  launch.py  mkdocs.yml  pyproject.toml  quickview-env.yml  release.sh  setup_tauri.sh  setupenv  utilities.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: README.md  bugfix_branch.md  config.yml  feature_branch.md  release_branch.md
.github/workflows/: create-release-pr.yml  finalize-release.yml  package-and-release.yml  package.yml  pre-commit-autoupdate.yml  pre-commit.yml  release.yml  tauri.yml  test.yml
data/: aerosol_F2010.eam.h0.2014-12.nc  globe.vtr
docs/: README.md  data-requirements.md  future.md  style.css
docs/setup/: execution.md  for_app_developers.md  for_end_users.md  requirements.md
docs/tutorials/: eamapp.md
docs/userguide/: camera.md  connectivity.md  control_panel.md  data_requirements.md  gui_overview.md  launch.md  reminders.md  toolbar.md  view_port.md  viewport.md
eamapp/: eamapp.py  interface.py  pipeline.py  utilities.py  view_manager.py  viewmanager.py  vissource.py
eamapp/data/: conn
eamapp/plugins/: eam_filters.py  eam_gridlines.py  eam_linesrc.py  eam_projection.py  eam_reader.py
eamapp/ui/: FileSelect.py  UICard.py  VariableSelect.py  file_selection.py  projection_selection.py  slice_selection.py  toolbar.py  variable_selection.py  view_settings.py
eamapp/vissource/: viewmanager.py  vissource.py
plugins/: eam_filters.py  eam_gridlines.py  eam_linesrc.py  eam_projection.py  eam_reader.py
quickview/: __init__.py  app.py  app2.py  colorbar_cache.py  interface.py  pipeline.py  utilities.py  view_manager.py  view_manager2.py
quickview/assets/: __init__.py
quickview/components/: dialogs.py  doc.py  drawers.py  file_browser.py  toolbars.py  tools.py
quickview/data/: connectivity.nc
quickview/plugins/: eam_filters.py  eam_gridlines.py  eam_projection.py  eam_reader.py
quickview/presets/: __init__.py
quickview/ui/: file_selection.py  grid.py  projection_selection.py  scalar_bar.py  slice_selection.py  toolbar.py  variable_selection.py  view_settings.py
quickview/utils/: __init__.py  cli.py  (+4 more)
scripts/: README.md  generate_colorbar_cache.py  release.sh  setup_tauri.sh  setup_tauri2.sh
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
vissource/: viewmanager.py  vissource.py
(+17 files in other folders)
