[project]
name = "EAMQuickView"
version = "0.8.8"
description = "An application to explore/analyze data for the Earth Atmosphere Model (EAM)"
authors = [
    {name = "Kitware Inc."},
]
dependencies = [
    "trame>=3.6",
    "trame-vtk>=2.6",
    "trame-vuetify>=2.4",
    "netCDF4>=1.6.5",
    "trame-components>=2.3.2",
    "trame-grid-layout>=1.0.3",
    "pyproj>=3.6.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache Software License"}
keywords = ["Python", "Interactive", "Web", "Application", "Framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools.packages.find]
where = ["."]
