[project]
name = "quickview"
version = "0.1.20"
description = "An application to explore/analyze data for atmosphere component for E3SM"
authors = [
    {name = "Kitware Inc."},
]
dependencies = [
    "trame>=3.6",
    "trame-vtk>=2.6",
    "trame-vuetify>=2.4",
    "trame-components>=2.3.2",
    "trame-grid-layout>=1.0.3",
    "trame-tauri>=0.6.2",
    "pyproj>=3.6.1",
    "netCDF4>=1.6.5",
    "pyinstaller",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "Apache Software License"}
keywords = ["Python", "Interactive", "Web", "Application", "Framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
quickview = [
  "presets/**",
  "data/**"
]

[project.scripts]
quickview = "quickview.app:main"

[tool.ruff.lint.per-file-ignores]
# Ignore star import issues in ParaView plugins
"quickview/plugins/*.py" = ["F403", "F405"]
"quickview/pipeline.py" = ["F821"]  # Plugin classes loaded dynamically
